--- a/spacebattletests/spacebattletests.csproj
+++ b/spacebattletests/spacebattletests.csproj
@@ -12,6 +12,7 @@
 		 <PrivateAssets>all</PrivateAssets>
 	 </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="moq" Version="4.20.69" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.40" />
     <PackageReference Include="xunit" Version="2.4.1" />
